chapter-7/third.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thirdapp
spec:
  # securityContext:
  #   runAsUser: 1000
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
  - name: busy 
    image: busybox
    command:
      - sleep
      - "3600"
    securityContext:
      runAsUser: 2000
      allowPrivilegeEscalation: false
