chapter-7/custom_webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  name: custom-webserver
  labels:
    app: custom-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-webserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: custom-webserver
    spec:
      containers:
      - image: k3d-kaixin-registry:12345/simpleapp:v1.0
        imagePullPolicy: Always
        name: custom-webserver
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: custom-webserver-service
spec:
  ports:
  - port: 8080
    targetPort: 7888
    protocol: TCP
  selector:
    app: custom-webserver
  sessionAffinity: None
status:
  loadBalancer: {}
