chapter-7/newservice-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32000
  selector:
    example: second
  sessionAffinity: None
status:
  loadBalancer: {}
