chapter-7/newservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: secondapp
  sessionAffinity: None
status:
  loadBalancer: {}
